[package]
name = "benchmark_suite"
version = "0.0.8"
edition = "2021"

[lib]
name = "benchmark_suite"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/integration_tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-traits = "0.2.15"
owo-colors = "3.5.0"
rand = "0.8.5"
