[package]
name = "benchmark_suite"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["testing", "benchmarking"]
repository = "https://github.com/JamieH01/benchmark_suite"
description = "Quickly collect benchmarking information with complete I/O control"


[lib]
name = "benchmark_suite"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/integration_tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
num = "0.4.0"
num-traits = "0.2.15"
owo-colors = "3.5.0"
